# monospace

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md  README.original.md  check.sh  mockup.html  mockup.md  mockup.ps  monospace.sublime-project  name  newplan  pre-commit  pyproject.toml  pytest.ini  repl.py  todo
codex/: test.md
mocks/: page
mono/: __main__.py  book.py  compiler.py  context.py  layout.py  pager.py  parser.py  viewer.py
mono/core/: __init__.py  layout.py  parse.py  prerender.py  process.py  render.py
mono/core/domain/: document.py  settings.py
mono/core/formatting/: __init__.py  ansi.py  postscript.py
mono/core/rendering/: paragraph.py
mono/drawing/: paragraph.py  tables.py  text.py  util.py
mono/formatting/: terminal.py
mono/symbols/: characters.py
mono/util/: debug.py  lang.py
monospace/: __main__.py  cursebox  util.py
monospace/cli/: __init__.py  pdf.py  read.py  typeset.py  util.py
monospace/core/: __init__.py  layout.py  parse.py  process.py  render.py  spelling.py  typeset.py
notes/: sources  todo
poc/: README.md  mockup.json  mockup.out  mockup.page1  mockup.page2  mockup.py  newplan  requirements.txt
poc/mono/: __main__.py  book.py  compiler.py  cursebox
resources/: .gitignore  README.header.html  README.source.md  gradient.md  images.md  logo  test.md
scripts/: box.py  check.sh  make_readme.sh  pre-commit  repl.py
scripts/fonts/: download.sh  extend.py  generate_fonts.sh  mapping.json
tests/: test_mono.py  test_paragraph_rendering.py
(+32 files in other folders)
