[tool.poetry]
name = "monospace"
version = "0.1.10"
description = "Book typesetter for the terminal"
readme = "README.md"
authors = ["Hamza Haiken <tenchi@team2xh.net>"]
keywords = ["typesetting", "terminal"]
repository = "https://github.com/Tenchi2xh/monospace"

[tool.poetry.scripts]
monospace = 'monospace.cli:monospace'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8"
pypandoc = "^1.8"
pyphen = "^0.12"
Jinja2 = "^3"
cursebox-lib = "^1.0"
Pillow = "^9"
2xh-leet = "^1"

[tool.poetry.dev-dependencies]
pytest = "^7"
ptpython = "^0.41.0"
better-exceptions = "^0.3"
flake8 = "^4"
pytest-cov = "^3"
pre-commit = "^2"
